--- a/documents/Final Report/Gloss.tex
+++ b/documents/Final Report/Gloss.tex
@@ -31,15 +31,15 @@
 
 \newacronym{pcbs}{PCBs}{Printed Circuit Boards} 
 
-\newacronym{cft}{CFT}{Compact Fluorescent Tube} 
+\newacronym{cfl}{CFL}{Compact Fluorescent Lamp} 
 
-\newacronym{morning}{MN}{morning}
+\newacronym{morning}{DY}{Daytime}
 
-\newacronym{afternoon}{AN}{afternoon}
+\newacronym{afternoon}{ST}{Sunset}
 
-\newacronym{evening}{EV}{evening}
+\newacronym{evening}{TW}{Twilight}
 
-\newacronym{night}{NX}{night}
+\newacronym{night}{NX}{Night}
 
 \newacronym{spd}{SPD}{Spectral Power Density}
 
@@ -54,3 +54,15 @@
 \newacronym{l}{L}{Long-Wavelength}
 
 \newacronym{iprgc}{ipRGC}{intrinsically photosensitive Retinal Ganglion Cells}
+
+\newacronym{rtc}{RTC}{Real Time Clock}
+
+\newacronym{ic}{IC}{Integrated Circuit}
+
+\newacronym{esd}{ESD}{Electro-static Discharge}
+
+\newacronym{cct}{CCT}{Correlated Colour Temperature}
+
+\newacronym{car}{CAR}{Cortisol Awakening Response}
+
+\newacronym{sad}{SAD}{Seasonal Affective Disorder}
