--- a/documents/Final Report/Intro.tex
+++ b/documents/Final Report/Intro.tex
@@ -87,13 +87,13 @@ The risk-assessment and resources forms have been kept up-to-date throughout the
 \paragraph{Reflection}
 The successful completion of all the main outcomes of the project is a testament to the good planning that has been observed from the beginning.
 
-The continued planning  and de-risking, alongside the effective use of supervision, have ensured that all the primary aims were achieved within the timeframe. This, in turn, allowed the adherence to milestones and deadlines, including the progress review. Contingencies played a large role in delivery of the project, and are discussed further in chapter \ref{}.
+The continued planning  and de-risking, alongside the effective use of supervision, have ensured that all the primary aims were achieved within the timeframe. This, in turn, allowed the adherence to milestones and deadlines, including the progress review. Contingencies played a large role in delivery of the project, and are discussed further in chapter \ref{Sec:physicalOuts}.
 
 Mitigating any potential risks through the use of the risk-assessment (Appendix \ref{App:Risk} early in the project allowed for progress to be made safely and appropriately. 
 
 The Engineering Council's UK-SPEC has been consulted throughout the project and a spreadsheet has been kept up to date containing relevant evidence of each competency. This has helped to keep the project relevant to engineering professionalism and personal development. The logbook has been used as the main repository for all of the relevant documentation, minutes, notes and technical details. Using this, alongside $ClickUp^{TM}$ for planning tasks and time management, has streamlined the workflow, allowing for much more efficient use of time.
 
-Overall, the management of this project has been executed excellently and, despite the pandemic, all changes to circumstance have been overcome (more in chapter \ref{}).
+Overall, the management of this project has been executed excellently and, despite the pandemic, all changes to circumstance have been overcome (more in chapter \ref{Sec:physicalOuts}).
 
 % UK SPEC
 
