--- a/documents/Final Report/LitReview.tex
+++ b/documents/Final Report/LitReview.tex
@@ -17,7 +17,7 @@ It wasn't always this way. For only the most recent 1.5 million years - a blink 
 This was until Michael Faraday's contributions to science allowed Davy to produce the first functional electric light: the arc lamp \citep{knightHumphryDavyScience1998}. Since that fateful day, humans' relationship with night has grown increasingly distant. In 1878, Swan presented the first  incandescent lamp, patented by Edison in 1880 (though it is believed that others were developing this technology concurrently) %\citep{montoyaIndoorLightingTechniques2017}
 . These bulbs are very inefficient; the peak wavelength is determined by the temperature of the gas in the bulb. In order for visible emission to occur, very high temperatures must be achieved - and still the majority of the light will be infra-red (IR) and not visible to the human eye \citep{montoyaIndoorLightingTechniques2017}.
 
-The next widely adopted innovation was discharge lamps such as sodium lamps and fluorescent tubes, as many Correlated Colour Temperatures (CCTs) could be achieved. A \acrfull{cft} could directly replace an incandescent bulb using the same fitting.
+The next widely adopted innovation was discharge lamps such as sodium lamps and fluorescent tubes, as many \acrfull{cct} values could be achieved. A \acrfull{cfl} could directly replace an incandescent bulb using the same fitting.
 
 While LEDs gained widespread popularity in the early $21^{st}$ century \citep{matsumotoMeasuringHouseholdAbility2020}, the first visible light LED was produced back in 1962 by Nick Holonyak \citep{holonyakCOHERENTVISIBLELIGHT1962}, based on the even earlier LEDs of Oleg Losev from 1927 \citep{zheludevLifeTimesLED2007}. It wasn't until 1995 that a non-red LED was produced, solving the issue of monochromasity of LED technology (it was blue) \citep{nakamuraInGaNAlGaNBlue1995}.
 
@@ -116,19 +116,20 @@ Another study found that social jetlag - the jetlag-like effect of inconsistent 
 
 \subsection{Seasonal Affective Disorder}
 
-Seasonal Affective Disorder (SAD) is caused by a lack of light in the winter months when the sun is lower and takes a shorter path across the sky \citep{eastmanNaturalSummerWinter1990}. It has been long considered a fact that bright light helps alleviate the symptoms of SAD \citep{magnussonTreatmentSeasonalAffective1991, leeSpectralPropertiesPhototherapy1997,eastmanBrightLightTreatment1998}, but this has actually been quite a controversial topic, with others claiming that the placebos in these studies were not adequate, and that the anti-depressant effect can be attributed to placebo effect \citep{eastman26ComparisonTwo1993}. A comprehensive meta-analysis found that only 13\% of studies published between 1975 and 2003 were adequate in their methods \citep{goldenEfficacyLightTherapy2005}. The meta-analysis also highlighted the importance of dawn simulation, which performed better than both bright-light and placebo effects significantly \citet{averyDawnSimulationBright2001}.
+\acrfull{sad} is caused by a lack of light in the winter months when the sun is lower and takes a shorter path across the sky \citep{eastmanNaturalSummerWinter1990}. It has been long considered a fact that bright light helps alleviate the symptoms of \acrshort{sad} \citep{magnussonTreatmentSeasonalAffective1991, leeSpectralPropertiesPhototherapy1997,eastmanBrightLightTreatment1998}, but this has actually been quite a controversial topic, with others claiming that the placebos in these studies were not adequate, and that the anti-depressant effect can be attributed to placebo effect \citep{eastman26ComparisonTwo1993}. A comprehensive meta-analysis found that only 13\% of studies published between 1975 and 2003 were adequate in their methods \citep{goldenEfficacyLightTherapy2005}. The meta-analysis also highlighted the importance of dawn simulation, which performed better than both bright-light and placebo effects significantly \citet{averyDawnSimulationBright2001}.
 
 
 \section{Cortisol and Attentiveness}
 \label{Sec:Cortisol}
 
-Melatonin is essential for sleep, building throughout the evening and peaking in the middle of the night. Similarly, Cortisol - produced in the adrenal gland - helps us wake up, and peaks around mid-morning. This is known as the Cortisol Awakening Response (CAR) and is, of course, also regulated by the circadian rhythm \citep{friesCortisolAwakeningResponse2009}.
+Melatonin is essential for sleep, building throughout the evening and peaking in the middle of the night. Similarly, Cortisol - produced in the adrenal gland - helps us wake up, and peaks around mid-morning. This is known as the \acrfull{car} and is, of course, also regulated by the circadian rhythm \citep{friesCortisolAwakeningResponse2009}.
 
 Cortisol is the hormone of wakefulness and alertness and it has been shown that a higher spike in morning cortisol is correlated with better cognitive performance \citep{evansDiurnalCortisolCycle2011}, and general daytime cortisol improves alertness \citep{chapototCortisolSecretionRelated1998}. It is clear, then, that we want to maximise the CAR, which can be done through exposure to short-wavelength (blue) light after awakening \citep{figueiroShortWavelengthLightEnhances2012}. Dawn simulation has also been shown to improve the CAR - more so than just \gls{BlueLight} - as well as improving melatonin regulation, increasing well-being, mood and cognitive performance \citep{gabelEffectsArtificialDawn2013}.
 
 It is also well documented that cortisol is a large contributing factor to mood disorders, especially bipolar disorder \citep{youngCortisolMoodDisorders2004}. A study by \citet{sitLightTherapyBipolar2007} found that \textit{``Women with bipolar illness are highly sensitive to morning bright light treatment''}, following this up a decade later with a double-blind placebo controlled trial that found that 68.2\% of the bright light participants had their bipolar disorder go into remission, compared with only 22.2\% in the placebo group \citep{sitAdjunctiveBrightLight2017}.
 
 \section{Mood and Lighting}
+\label{Sec:mood}
 
 Lighting arrangements affect how we perceive spaces \citep{durakImpactLightingArrangements2007}, with the general finding being that daylight-style LEDs are the most comfortable during daytime hours \citep{cajochenEffectDaylightLED2019}. It is also known that red ambient lighting is more relaxing than blue \citep{lauferPsychophysiologicalEffectsColoured2009}, and that blue causes more stimulation that red \citep{schweitzerInvestigationGenderAgerelated2016}. Pulsating orange light has also been shown to be even more relaxing \citep{wanInfluenceLightingColor2012}, it seems as though this could have a link to the fact it is a closer approximation to firelight.
 
@@ -150,11 +151,11 @@ Over the past 150 years, electric lighting has gone from a pipe-dream to an ever
 
 Alongside these developments, circadian science has been driving forward, from observations of the nature of free-running circadian rhythms to the discovery that light has profound affects upon them. \Gls{BlueLight}'s effect is especially powerful and is becoming more and more ubiquitous as our technology advances. As \citet{czeislerPerspectiveCastingLight2013} says in his landmark perspective piece entitled \textit{Casting the Light on Sleep Deficiency: ``Technology has effectively decoupled us from the natural 24-hour day to which our bodies evolved''}. 
 
-This decoupling is dangerous for many aspects of our health. Not only is sleep important for all aspects of health and well-being, melatonin itself has a promising effect on many diseases including type II diabetes, SAD, cancer, and many others. Cortisol, melatonin's sister hormone, is also essential for a healthy life and promotes attentiveness, alertness and cognitive function.
+This decoupling is dangerous for many aspects of our health. Not only is sleep important for all aspects of health and well-being, melatonin itself has a promising effect on many diseases including type II diabetes, \acrshort{sad}, cancer, and many others. Cortisol, melatonin's sister hormone, is also essential for a healthy life and promotes attentiveness, alertness and cognitive function.
 
 Looking to the past for answers, we see that the output spectra of more outdated technologies such as incandescent bulbs are far more appropriate for evening use than the more modern fluorescent tubes and LEDs. But these older technologies are far less energy efficient. On the other hand, the adoption of more energy efficient technologies should not come at the expense of human health \citep{boyceReviewImpactLight2010} due to excessive \gls{BlueLight} exposure - which has also been shown time and again to damage our eyes in excessive quantities \citep{uedaEyeDamageControl2009, kuseDamagePhotoreceptorderivedCells2014, niwanoBlueLightInjures2014, marekBlueLightPhototoxicity2018, nakamuraExposureExcessiveBlue2018}.
 
-\Gls{BlueLight} is not all bad, though. Its effects on SAD, bipolar disorder, and cognitive ability show that it is all about giving our body the right light at the right time of day. Some people already strive for this by using \gls{BlueLight} blocking glasses or RGB LED bulbs that can be set to change colour. These technologies are flawed, though: glasses are an inconvenience to wear and RGB LEDs only approximate perceived colours by combining red, green and blue, thereby ensuring there is more short-wavelength light that is desirable \citep{gilewskiEcologicalHarmfulnessRGB2018}.
+\Gls{BlueLight} is not all bad, though. Its effects on \acrshort{sad}, bipolar disorder, and cognitive ability show that it is all about giving our body the right light at the right time of day. Some people already strive for this by using \gls{BlueLight} blocking glasses or RGB LED bulbs that can be set to change colour. These technologies are flawed, though: glasses are an inconvenience to wear and RGB LEDs only approximate perceived colours by combining red, green and blue, thereby ensuring there is more short-wavelength light that is desirable \citep{gilewskiEcologicalHarmfulnessRGB2018}.
 
 This has led many to believe that an overhaul in the lighting used in the built environment is of paramount importance, with many papers calling for immediate action \citep{webbConsiderationsLightingBuilt2006, boyceReviewImpactLight2010, groseArtificialLightNight2014}.
 
