--- a/documents/Bibliography/project.bib
+++ b/documents/Bibliography/project.bib
@@ -175,6 +175,15 @@
   number = {3}
 }
 
+@misc{avsdiskcreatorAVS4YOUAVSDisc2019,
+  title = {{{AVS4YOU}} {$>>$} {{AVS Disc Creator}} {$>>$} {{Introduction}} into {{Disc Types}} {$>>$} {{Optical Disc Structure}}},
+  author = {AVSDiskCreator},
+  year = {2019},
+  url = {https://onlinehelp.avs4you.com/AVS-Disc-Creator/Introduction/DiscStructure.aspx},
+  urldate = {2021-04-22},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\RMLB6Z6X\\DiscStructure.html}
+}
+
 @article{bailensonNonverbalOverloadTheoretical2021,
   title = {Nonverbal {{Overload}}: {{A Theoretical Argument}} for the {{Causes}} of {{Zoom Fatigue}}},
   shorttitle = {Nonverbal {{Overload}}},
@@ -505,6 +514,24 @@
   url = {https://ieeexplore.ieee.org/abstract/document/6360474},
   urldate = {2021-02-11},
   file = {C\:\\Users\\Nick\\Zotero\\storage\\E46FDWN3\\6360474.html}
+}
+
+@article{chandlerNonnaiveteAmazonMechanical2014,
+  title = {Nonna\"ivet\'e among {{Amazon Mechanical Turk}} Workers: {{Consequences}} and Solutions for Behavioral Researchers},
+  shorttitle = {Nonna\"ivet\'e among {{Amazon Mechanical Turk}} Workers},
+  author = {Chandler, Jesse and Mueller, Pam and Paolacci, Gabriele},
+  year = {2014},
+  month = mar,
+  volume = {46},
+  pages = {112--130},
+  issn = {1554-3528},
+  doi = {10.3758/s13428-013-0365-7},
+  url = {https://doi.org/10.3758/s13428-013-0365-7},
+  urldate = {2021-04-25},
+  abstract = {Crowdsourcing services\textemdash particularly Amazon Mechanical Turk\textemdash have made it easy for behavioral scientists to recruit research participants. However, researchers have overlooked crucial differences between crowdsourcing and traditional recruitment methods that provide unique opportunities and challenges. We show that crowdsourced workers are likely to participate across multiple related experiments and that researchers are overzealous in the exclusion of research participants. We describe how both of these problems can be avoided using advanced interface features that also allow prescreening and longitudinal data collection. Using these techniques can minimize the effects of previously ignored drawbacks and expand the scope of crowdsourcing as a tool for psychological research.},
+  journal = {Behavior Research Methods},
+  language = {en},
+  number = {1}
 }
 
 @article{chapototCortisolSecretionRelated1998,
@@ -860,6 +887,13 @@
   keywords = {Ambience,Artificial lighting,Lighting quality,Mood,Perception,Space quality},
   language = {en},
   number = {10}
+}
+
+@misc{DvdVsCd,
+  title = {Dvd\_vs\_cd.Gif (600\texttimes 300)},
+  url = {https://www.gta.ufrj.br/grad/01_1/dvd/dvd_vs_cd.gif},
+  urldate = {2021-04-22},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\Y7E2V2KI\\dvd_vs_cd.html}
 }
 
 @incollection{eastman26ComparisonTwo1993,
@@ -1480,6 +1514,26 @@ Very good graphs!},
   urldate = {2021-03-15},
   abstract = {This case-control study addressed the hypothesis that uninterrupted exposure to light is associated with increased rates of breast cancer. We compared the odds of profound binocular blindness among women with a diagnosis of breast cancer with the odds of profound binocular blindness among women with diagnoses of coronary heart disease or stroke. All hospital discharges in the National Hospital Discharge Survey from 1979 through 1987 were analyzed, after exclusion of women with diabetes. Profoundly blind women were half as likely to have breast cancer as women who were not profoundly blind. This effect diminished substantially with increasing age.},
   journal = {Epidemiology},
+  number = {3}
+}
+
+@article{hallAnalysisLaborMarket2018,
+  title = {An {{Analysis}} of the {{Labor Market}} for {{Uber}}'s {{Driver}}-{{Partners}} in the {{United States}}},
+  author = {Hall, Jonathan V. and Krueger, Alan B.},
+  year = {2018},
+  month = may,
+  volume = {71},
+  pages = {705--732},
+  publisher = {{SAGE Publications Inc}},
+  issn = {0019-7939},
+  doi = {10.1177/0019793917717222},
+  url = {https://doi.org/10.1177/0019793917717222},
+  urldate = {2021-04-25},
+  abstract = {Uber, the ride-sharing company launched in 2010, has grown at an exponential rate. Using both survey and administrative data, the authors provide the first comprehensive analysis of the labor market for Uber's driver-partners. Drivers appear to be attracted to the Uber platform largely because of the flexibility it offers, the level of compensation, and the fact that earnings per hour do not vary much based on the number of hours worked. Uber's driver-partners are more similar in terms of their age and education to the general workforce than to taxi drivers and chauffeurs. Most of Uber's driver-partners had full- or part-time employment before joining Uber, and many continue in those positions after starting to drive with the Uber platform, which makes the flexibility to set their own hours especially valuable. Drivers often cite the desire to smooth fluctuations in their income as one of their reasons for partnering with Uber.},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\UEIQZ6B3\\Hall and Krueger - 2018 - An Analysis of the Labor Market for Uber’s Driver-.pdf},
+  journal = {ILR Review},
+  keywords = {platform economy,ride sharing,technology,transportation industry,Uber},
+  language = {en},
   number = {3}
 }
 
@@ -2507,6 +2561,22 @@ should be less than 16.}
   number = {3}
 }
 
+@article{millerReviewThomasJefferson1990,
+  title = {Review of {{Thomas Jefferson}}: {{Statesman}} of {{Science}}},
+  shorttitle = {Review of {{Thomas Jefferson}}},
+  author = {Miller, Charles A.},
+  year = {1990},
+  volume = {98},
+  pages = {668--670},
+  publisher = {{Virginia Historical Society}},
+  issn = {0042-6636},
+  url = {https://www.jstor.org/stable/4249186},
+  urldate = {2021-04-25},
+  collaborator = {Bedini, Silvio A.},
+  journal = {The Virginia Magazine of History and Biography},
+  number = {4}
+}
+
 @article{millsCircadianRhythmsThree1964,
   title = {Circadian Rhythms during and after Three Months in Solitude Underground},
   author = {Mills, J. N.},
@@ -2690,6 +2760,16 @@ should be less than 16.}
   language = {en}
 }
 
+@misc{MyBriefCurious,
+  title = {My {{Brief}} and {{Curious Life As}} a {{Mechanical Turk}}},
+  url = {https://gizmodo.com/my-brief-and-curious-life-as-a-mechanical-turk-1587864671},
+  urldate = {2021-04-25},
+  abstract = {As accomplished as modern-day computers are, there are some very basic things even the smartest machines have yet to master: tough judgment calls, advanced image recognition, making goofy faces, conducting psychological surveys. These are an assortment of tasks we humans can still claim as our own. Or at least, that we can outsource to other, less fortunate humans. Like me.},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\2Q6Z44QU\\my-brief-and-curious-life-as-a-mechanical-turk-1587864671.html},
+  journal = {Gizmodo},
+  language = {en-us}
+}
+
 @article{nakamuraExposureExcessiveBlue2018,
   title = {Exposure to Excessive Blue {{LED}} Light Damages Retinal Pigment Epithelium and Photoreceptors of Pigmented Mice},
   author = {Nakamura, Maho and Yako, Tomohiro and Kuse, Yoshiki and Inoue, Yuki and Nishinaka, Anri and Nakamura, Shinsuke and Shimazawa, Masamitsu and Hara, Hideaki},
@@ -2860,6 +2940,19 @@ should be less than 16.}
   keywords = {Light,Melatonin,Season},
   language = {en},
   number = {2}
+}
+
+@article{padleckasFileFluorescentLighting2005,
+  title = {File:{{Fluorescent}} Lighting Spectrum Peaks Labelled.Svg},
+  shorttitle = {File},
+  author = {Padleckas, H},
+  year = {2005},
+  url = {https://en.wikipedia.org/wiki/File:Fluorescent_lighting_spectrum_peaks_labelled.svg},
+  urldate = {2021-04-22},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\VUI8UI84\\FileFluorescent_lighting_spectrum_peaks_labelled.html},
+  journal = {Wikipedia},
+  language = {en}
 }
 
 @article{papagiannakopoulosCircadianRhythmDisruption2016,
@@ -3259,6 +3352,19 @@ should be less than 16.}
   file = {C\:\\Users\\Nick\\Zotero\\storage\\45YTXHDM\\258363.html},
   journal = {Journal of Political Economy},
   number = {5}
+}
+
+@misc{rushkoffHowShameBecame2021,
+  title = {How {{Shame Became}} the {{Weapon}} of the {{Shameless}}},
+  author = {Rushkoff, Douglas},
+  year = {2021},
+  month = jan,
+  url = {https://medium.com/team-human/how-shame-became-the-weapon-of-the-shameless-69c5f4d1b007},
+  urldate = {2021-04-25},
+  abstract = {Social stigmas are used to keep us from finding our collective power},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\FJBZYQLB\\how-shame-became-the-weapon-of-the-shameless-69c5f4d1b007.html},
+  journal = {Medium},
+  language = {en}
 }
 
 @book{rushkoffTeamHuman2019,
@@ -3899,6 +4005,16 @@ should be less than 16.}
   url = {http://photoarchive.lib.uchicago.edu/db.xqy?one=apf1-03489.xml},
   urldate = {2021-02-27},
   file = {C\:\\Users\\Nick\\Zotero\\storage\\79WXNMK3\\db.html}
+}
+
+@inproceedings{unResolutionAdoptedGeneral2015,
+  title = {Resolution Adopted by the {{General Assembly}} on 1 {{September}} 2015},
+  booktitle = {Transforming Our World: The 2030 {{Agenda}} for {{Sustainable Development}}},
+  author = {UN},
+  year = {15 spet 2015},
+  volume = {70},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\SMKW59RR\\N1526986.pdf},
+  series = {1}
 }
 
 @article{vandenheiligenbergTumorPromotingEffect1999,
