--- a/documents/Final Report/FYP.bib
+++ b/documents/Final Report/FYP.bib
@@ -77,6 +77,15 @@
   number = {3}
 }
 
+@misc{avsdiskcreatorAVS4YOUAVSDisc2019,
+  title = {{{AVS4YOU}} {$>>$} {{AVS Disc Creator}} {$>>$} {{Introduction}} into {{Disc Types}} {$>>$} {{Optical Disc Structure}}},
+  author = {AVSDiskCreator},
+  year = {2019},
+  url = {https://onlinehelp.avs4you.com/AVS-Disc-Creator/Introduction/DiscStructure.aspx},
+  urldate = {2021-04-22},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\RMLB6Z6X\\DiscStructure.html}
+}
+
 @article{benderSolidStateLightingConcise2015,
   title = {Solid-{{State Lighting}}: {{A Concise Review}} of the {{State}} of the {{Art}} on {{LED}} and {{OLED Modeling}}},
   shorttitle = {Solid-{{State Lighting}}},
@@ -1651,6 +1660,19 @@
   number = {2}
 }
 
+@article{padleckasFileFluorescentLighting2005,
+  title = {File:{{Fluorescent}} Lighting Spectrum Peaks Labelled.Svg},
+  shorttitle = {File},
+  author = {Padleckas, H},
+  year = {2005},
+  url = {https://en.wikipedia.org/wiki/File:Fluorescent_lighting_spectrum_peaks_labelled.svg},
+  urldate = {2021-04-22},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\VUI8UI84\\FileFluorescent_lighting_spectrum_peaks_labelled.html},
+  journal = {Wikipedia},
+  language = {en}
+}
+
 @article{papagiannakopoulosCircadianRhythmDisruption2016,
   title = {Circadian {{Rhythm Disruption Promotes Lung Tumorigenesis}}},
   author = {Papagiannakopoulos, Thales and Bauer, Matthew R. and Davidson, Shawn M. and Heimann, Megan and Subbaraj, Lakshmipriya and Bhutkar, Arjun and Bartlebaugh, Jordan and Vander Heiden, Matthew G. and Jacks, Tyler},
@@ -2159,6 +2181,16 @@
   url = {http://photoarchive.lib.uchicago.edu/db.xqy?one=apf1-03489.xml},
   urldate = {2021-02-27},
   file = {C\:\\Users\\Nick\\Zotero\\storage\\79WXNMK3\\db.html}
+}
+
+@inproceedings{unResolutionAdoptedGeneral2015,
+  title = {Resolution Adopted by the {{General Assembly}} on 1 {{September}} 2015},
+  booktitle = {Transforming Our World: The 2030 {{Agenda}} for {{Sustainable Development}}},
+  author = {UN},
+  year = {15 spet 2015},
+  volume = {70},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\SMKW59RR\\N1526986.pdf},
+  series = {1}
 }
 
 @article{vandenheiligenbergTumorPromotingEffect1999,
